tests/negative/comptime_missing_value.ora
contract ComptimeMissingValue {
    pub fn run() -> u256 {
        return comptime {};
    }
}
